# poem_up

./: .env  Cargo.toml
api/: Cargo.toml
api/src/: app.rs  config.rs  error.rs  lib.rs
api/src/middlewares/: auth.rs  mod.rs  service.rs
api/src/users/: api.rs  mod.rs  models.rs  routes.rs
entity/: Cargo.toml
entity/src/: error.rs  lib.rs
entity/src/dynamic/: mod.rs
entity/src/invitation_codes/: mod.rs
entity/src/invitation_record/: mod.rs
entity/src/users/: mod.rs
migration/: Cargo.toml
migration/src/: create_invitation_codes_table.rs  create_user_table.rs  lib.rs
rfcs/: 0000-template..md  0001-user.md  0002-邀请码.md
rfcs/drawio/: Invitation_code.drawio  user.drawio
service/: Cargo.toml
service/src/: error.rs  invitation_codes.rs  lib.rs  user.rs
src/: main.rs
