[package]
name = "poem_up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["service", ".", "entity", "api", "migration", "core"]

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

api = { path =  "./api" }

tracing = { version = "0.1" }