[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["debug"]

debug = []

[dependencies]
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }

dotenvy = { version = "0.15" }

figment = { version = "0.10", features = ["env"]}

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

tracing-subscriber = { version = "0.3" }
tracing = { version = "0.1" }

# web框架
poem = { version = "1.2.33", features = ["static-files"] }

entity = { path ="../entity" }

poem_up_service = { path ="../service" }

validator = { version = "0.16",  features = ["derive"] }
